--- a/src/main/resources/static/html/sort.html
+++ b/src/main/resources/static/html/sort.html
@@ -51,7 +51,7 @@
       <!-- Unnamed (Image) -->
       <!-- <div id="u60" class="ax_default image">
         <img id="u60_img" class="img " src="./image/back3.png"/>
-      </div> --> -->
+      </div> --> 
 
       <!-- Unnamed (Rectangle) -->
       <div id="u61" class="ax_default label">
